<resources>
    <string name="app_name">Tomilov-v-17</string>
    <string name="login_title">Access manager</string>
    <string name="username_hint">Ксения</string>
    <string name="password_hint">Пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="auth">Авторизоваться</string>
    <string name="profile_title">Profile</string>
    <string name="hello">Привет, %s!</string>
    <string name="exit">Выйти</string>
    <string name="online">Онлайн</string>
    <string name="shot">Снимок</string>
    <string name="settings_title">User settings</string>
    <string name="settings_header">Настройки</string>
    <string name="reset_settings">Сбросить настройки</string>
    <string name="opt1">Показывать ореол обитания вида</string>
    <string name="opt2">Показывать другие разновидности</string>
    <string name="opt3">Сообщать о необходимости полива</string>
    <string name="location_disabled">Отключено отображение\nмоего местоположения</string>
    <string name="location_enabled">Включено отображение\nмоего местоположения</string>
    <string name="plant_title_1">Росянка: Плотоядное растение, питающееся\nнасекомыми.</string>
    <string name="plant_date_1">22 декабря, в 11:20</string>
    <string name="plant_title_2">Цветы плюмерии красной: Деревья имеют\nсоцветия различных оттенков...</string>
</resources>